--- a/Visualization/2.0/assets/css/wordCloud.css
+++ b/Visualization/2.0/assets/css/wordCloud.css
@@ -1,5 +1,5 @@
 #wordCloud {
-    font-family:"Lucida Grande","Droid Sans",Arial,Helvetica,sans-serif;
+    font-family:"Montserrat",sans-serif;
     width: 100%;
     height: 100%;
 }
