--- a/thesis/templates/thesis/vis.html
+++ b/thesis/templates/thesis/vis.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     
         <style type="text/css">
-            .node {}
+        .node {
             stroke: #fff;
             stroke-width: 1.5px;
         }
