--- a/UI Draft/assets/css/style.sass
+++ b/UI Draft/assets/css/style.sass
@@ -107,6 +107,11 @@ div#side
 				border: none
 				background: none
 				width: 100%
+				text-align: left
+				box-sizing: border-box
+				height: 42px
+				margin-left: 0
+				transition: 0.25s
 
 				div.community-color
 					width: 20px
@@ -121,6 +126,9 @@ div#side
 					vertical-align: middle
 					font-size: 1.2em
 					margin-left: 10px
+
+				&:hover
+					margin-left: 8px
 
 			div.community-wordcloud
 				margin-left: 10px
