--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -19,6 +19,8 @@ div#top {
   height: 60px;
   width: 100%;
   background-color: #1e1e1e; }
+  div#top form {
+    height: 100%; }
   div#top button,
   div#top select {
     height: 100%;
