--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -43,7 +43,7 @@
 					<option value="2">Hashtags</option>
 					<option value="3">Retweets</option>
 				</select>
-				<button class="generateCommunities" tpye="submit">Generate Communities <i class="fa fa-arrow-right"></i></button>
+				<button class="generateCommunities" type="submit">Generate Communities <i class="fa fa-arrow-right"></i></button>
 			</form>
 		</div>
 
