Does the font work now?

--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -16,6 +16,10 @@ $textColor-top: rgb(255,255,255)
 	font-family: "Source Sans"
 	src: url(../fonts/SourceSansPro-Regular.ttf)
 
+@font-face
+	font-family: "Bebas Neue"
+	src: url(../fonts/BebasNeue.otf)
+
 body
 	line-height: 1.5em
 
