--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: "Source Sans";
   src: url(../fonts/SourceSansPro-Regular.ttf); }
+@font-face {
+  font-family: "Bebas Neue";
+  src: url(../fonts/BebasNeue.otf); }
 body {
   line-height: 1.5em; }
 
