--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -100,7 +100,7 @@ div#side
 	div#communities
 		border-radius: 5px
 		border: 1px solid $color-neutral
-		margin-top: 10px
+		margin: 10px 0
 		display: none
 
 		div.community
@@ -141,6 +141,21 @@ div#side
 				margin-left: 10px
 				height: 0
 				overflow: hidden
+
+	div#options
+
+		button
+			width: 100%
+			height: 100%
+			background-color: $color-green
+			transition: 0.25s
+			padding: 10px
+			border-radius: 5px
+			border: none
+			font-size: 0.8em
+
+			&:hover
+				background-color: $color-hover
 
 div#main
 	top: $height-top
