A few extra UI things
- Fixed some issues with the colors
- Highlighted selected community

--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -76,6 +76,8 @@ div#side {
     display: none; }
     div#side div#communities div.community {
       border-bottom: 1px solid #969696; }
+      div#side div#communities div.community.active {
+        background-color: gainsboro; }
       div#side div#communities div.community:last-child {
         border-bottom: none; }
       div#side div#communities div.community button.community-button {
