--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -106,6 +106,9 @@ div#side
 		div.community
 			border-bottom: 1px solid $color-neutral
 
+			&.active
+				background-color: $color-hover
+
 			&:last-child
 				border-bottom: none
 
