--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -116,7 +116,8 @@ div#side {
     padding: 10px;
     border-radius: 5px;
     border: none;
-    font-size: 0.8em; }
+    font-size: 0.8em;
+    margin-bottom: 10px; }
     div#side div#options button:hover {
       background-color: gainsboro; }
 
