--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -156,6 +156,7 @@ div#side
 			border-radius: 5px
 			border: none
 			font-size: 0.8em
+			margin-bottom: 10px
 
 			&:hover
 				background-color: $color-hover
