--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -16,6 +16,10 @@ $textColor-top: rgb(255,255,255)
 	font-family: "Source Sans"
 	src: url(../fonts/SourceSansPro-Regular.ttf)
 
+@font-face
+	font-family: "Bebas Neue"
+	src: url(../fonts/BebasNeue.otf)
+
 body
 	line-height: 1.5em
 
@@ -35,6 +39,9 @@ div#top
 	width: 100%
 	background-color: $bgColor-top
 
+	form
+		height: 100%
+		
 	button,
 	select
 		height: 100%
@@ -93,7 +100,7 @@ div#side
 	div#communities
 		border-radius: 5px
 		border: 1px solid $color-neutral
-		margin-top: 10px
+		margin: 10px 0
 		display: none
 
 		div.community
@@ -134,6 +141,21 @@ div#side
 				margin-left: 10px
 				height: 0
 				overflow: hidden
+
+	div#options
+
+		button
+			width: 100%
+			height: 100%
+			background-color: $color-green
+			transition: 0.25s
+			padding: 10px
+			border-radius: 5px
+			border: none
+			font-size: 0.8em
+
+			&:hover
+				background-color: $color-hover
 
 div#main
 	top: $height-top
