--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -18,7 +18,9 @@
         <script src="{% static 'thesis/node_modules/lodash/lodash.min.js' %}"></script>
         {% if word_cloud %}
         <script>
-        	UI.initializeVis({{ word_cloud|safe }}, {{ graph|safe }});
+        	$(document).ready(function(){
+        		UI.initializeVis({{ word_cloud|safe }}, {{ graph|safe }});
+        	});
         </script>
         {% endif %}
 	</head>
@@ -40,6 +42,7 @@
 					<option value="1">Following</option>
 					<option value="2">Hashtags</option>
 					<option value="3">Retweets</option>
+					<option value="4">Mentions</option>
 				</select>
 				<button class="generateCommunities" type="submit">Generate Communities <i class="fa fa-arrow-right"></i></button>
 			</form>
@@ -47,11 +50,18 @@
 
 		<div id="side">
 			<div id="evaluation">
-				<b>Modularity:</b> ?<br/>
+				<b>Modularity:</b> 
+				{% if request.session.output %}
+					{{ request.session.output.mod }}
+				{% endif %}
+				<br/>
 				<b>DBI:</b> ?
 			</div>
 
 			<div id="communities">
+			</div>
+
+			<div id="options">
 			</div>
 		</div>
 
