--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -31,12 +31,12 @@
 				{% csrf_token %}
 				<button>Upload Users & Tweets File</button>
 				</select>
-				<select name="algo">
+				<select id="selectAlgorithm" name="algo">
 					<option value="0" disabled selected>Choose Algorithm</option>
 					<option value="1">K-Means</option>
 					<option value="2">Divisive HC</option>
 				</select>
-				<select name="param">
+				<select id="selectParameter" name="param">
 					<option value="0" disabled selected>Choose Parameter</option>
 					<option value="1">Following</option>
 					<option value="2">Hashtags</option>
