--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -125,6 +125,9 @@ div#side {
     margin-bottom: 10px; }
     div#side div#options button:hover {
       background-color: gainsboro; }
+    div#side div#options button:disabled {
+      background-color: gainsboro;
+      color: #969696; }
 
 div#main {
   top: 60px;
@@ -152,6 +155,24 @@ div#main {
         color: #969696; }
   div#main .selectedNode {
     display: none; }
+  div#main div#graphOptions {
+    position: absolute;
+    bottom: -8px;
+    right: 10px; }
+    div#main div#graphOptions button {
+      border-radius: 5px 5px 0 0;
+      padding: 15px;
+      font-size: 0.9em;
+      background-color: #000;
+      transition: 0.25s;
+      vertical-align: bottom;
+      margin-left: 5px;
+      color: #FFF;
+      border: none;
+      display: inline-block; }
+      div#main div#graphOptions button:hover {
+        color: #969696;
+        padding-bottom: 18px; }
 
 /* General */
 select,
