Small UI changes
- Removed button for uploading file
- Added area in UI displaying the current algorithm and similarity
parameter

--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -95,7 +95,8 @@ div#side
 	left: 0
 	width: $width-side
 
-	div#evaluation
+	div#evaluation,
+	div#description
 		border-radius: 5px
 		background-color: $color-neutral
 		color: $textColor-top
@@ -103,11 +104,12 @@ div#side
 		padding: 10px
 		font-size: 0.9em
 		display: none
+		margin-bottom: 10px
 
 	div#communities
 		border-radius: 5px
 		border: 1px solid $color-neutral
-		margin: 10px 0
+		margin-bottom: 10px
 		display: none
 
 		div.community
