--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -66,18 +66,20 @@ div#side {
   top: 60px;
   left: 0;
   width: 350px; }
-  div#side div#evaluation {
+  div#side div#evaluation,
+  div#side div#description {
     border-radius: 5px;
     background-color: #969696;
     color: white;
     box-sizing: border-box;
     padding: 10px;
     font-size: 0.9em;
-    display: none; }
+    display: none;
+    margin-bottom: 10px; }
   div#side div#communities {
     border-radius: 5px;
     border: 1px solid #969696;
-    margin: 10px 0;
+    margin-bottom: 10px;
     display: none; }
     div#side div#communities div.community {
       border-bottom: 1px solid #969696; }
