Added basic error checking for frontend

--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -90,6 +90,14 @@ div#top
 				margin-right: -5px
 				margin-left: 15px
 
+		&:disabled
+			background-color: $color-hover
+
+			&:hover
+				i
+					margin-right: 0
+					margin-left: 10px
+
 div#side
 	top: $height-top
 	left: 0
