--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="{% static 'thesis/css/style.css' %}" type="text/css"/>
 		<script src="{% static 'thesis/js/jquery-3.1.1.min.js' %}"></script>
 		<script src="{% static 'thesis/js/ui.js' %}"></script>
+		<script src="{% static 'thesis/js/errorCheck.js' %}"></script>
 		<script src="{% static 'thesis/js/wordcloud.js' %}"></script>
 		<script src="{% static 'thesis/js/graph.js' %}"></script>
 		<script src="{% static 'thesis/js/d3.min.js' %}"></script>
