--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -61,6 +61,11 @@ div#top {
       div#top button.generateCommunities:hover i {
         margin-right: -5px;
         margin-left: 15px; }
+    div#top button.generateCommunities:disabled {
+      background-color: gainsboro; }
+      div#top button.generateCommunities:disabled:hover i {
+        margin-right: 0;
+        margin-left: 10px; }
 
 div#side {
   top: 60px;
