--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -36,7 +36,9 @@
 				<select id="selectAlgorithm" name="algo">
 					<option value="0" disabled selected>Choose Algorithm</option>
 					<option value="1">K-Means</option>
+					<option value="5">K-Means with Simulated Annealing</option>
 					<option value="2">Divisive HC</option>
+					<option value="6">Divisive HC with Simulated Annealing</option>
 					<option value="3">Agglomerative HC</option>
 					<option value="4">Agglomerative HC with Simulated Annealing</option>
 				</select>
