--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -186,6 +186,7 @@ div#main
 	top: $height-top
 	left: $width-side
 	width: calc(100% - 350px) /* manual width-side */
+	position: fixed
 
 	div.communityOptions
 		position: absolute
