--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -49,6 +49,11 @@
 					<option value="3">Retweets</option>
 					<option value="4">Mentions</option>
 				</select>
+				<select id="selectMeasure" name="measure">
+					<option value="0" disabled selected>Choose Measure</option>
+					<option value="1">Cosine Similarity</option>
+					<option value="2">Standard Similarity</option>
+				</select>
 				<button class="generateCommunities" type="submit">Generate Communities <i class="fa fa-arrow-right"></i></button>
 			</form>
 		</div>
