--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -157,10 +157,18 @@ div#side
 				&:hover
 					margin-left: 8px
 
-			div.community-wordcloud
+			div.community-stats
 				margin-left: 10px
 				height: 0
 				overflow: hidden
+				text-align: center
+				font-size: 0.75em
+				font-weight: bold
+
+			div.community-locations
+				height: 500px
+				width: 300px
+				overflow: scroll
 
 	div#options
 
