--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -12,17 +12,19 @@
 		<script src="{% static 'thesis/js/ui.js' %}"></script>
 		<script src="{% static 'thesis/js/errorCheck.js' %}"></script>
 		<script src="{% static 'thesis/js/wordcloud.js' %}"></script>
+		<script src="{% static 'thesis/js/locationPie.js' %}"></script>
 		<script src="{% static 'thesis/js/graph.js' %}"></script>
 		<script src="{% static 'thesis/js/d3.min.js' %}"></script>
 		<script src="{% static 'thesis/node_modules/d3/d3.min.js' %}"></script>
         <script src="{% static 'thesis/node_modules/d3-cloud/build/d3.layout.cloud.js' %}"></script>
         <script src="{% static 'thesis/node_modules/lodash/lodash.min.js' %}"></script>
+        <script src="{% static 'thesis/js/Chart.min.js' %}"></script>
         
         <script>
         	$(document).ready(function(){
         		UI.initializeUI();
         		{% if word_cloud %}
-        		UI.initializeVis({{ word_cloud|safe }}, {{ graph|safe }});
+        		UI.initializeVis({{ word_cloud|safe }}, {{ graph|safe }}, {{ locations|safe }});
         		{% endif %}
         	});
         </script>
