There is now a word cloud for the profile descriptions

--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -165,10 +165,10 @@ div#side
 				font-size: 0.75em
 				font-weight: bold
 
-			div.community-locations
-				height: 500px
-				width: 300px
-				overflow: scroll
+				div
+					height: 490px
+					width: 300px
+					overflow: scroll
 
 	div#options
 
