--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -123,10 +123,10 @@ div#side {
         text-align: center;
         font-size: 0.75em;
         font-weight: bold; }
-      div#side div#communities div.community div.community-locations {
-        height: 500px;
-        width: 300px;
-        overflow: scroll; }
+        div#side div#communities div.community div.community-stats div {
+          height: 490px;
+          width: 300px;
+          overflow: scroll; }
   div#side div#options button {
     width: 100%;
     height: 100%;
