--- a/thesis/static/thesis/css/style.sass
+++ b/thesis/static/thesis/css/style.sass
@@ -170,6 +170,10 @@ div#side
 					width: 300px
 					overflow: scroll
 
+				div.community-wordcloud svg,
+				div.community-profilecloud svg
+					transform: rotate(180deg)
+
 	div#options
 
 		button
