--- a/thesis/static/thesis/css/style.css
+++ b/thesis/static/thesis/css/style.css
@@ -127,6 +127,9 @@ div#side {
           height: 490px;
           width: 300px;
           overflow: scroll; }
+        div#side div#communities div.community div.community-stats div.community-wordcloud svg,
+        div#side div#communities div.community div.community-stats div.community-profilecloud svg {
+          transform: rotate(180deg); }
   div#side div#options button {
     width: 100%;
     height: 100%;
