--- a/thesis/templates/thesis/index.html
+++ b/thesis/templates/thesis/index.html
@@ -54,7 +54,7 @@
 				<select id="selectMeasure" name="measure">
 					<option value="0" disabled selected>Choose Measure</option>
 					<option value="1">Cosine Similarity</option>
-					<option value="2">Standard Similarity</option>
+					<option value="2">Parameter Similarity (Zhang, 2012)</option>
 				</select>
 				<button class="generateCommunities" type="submit">Generate Communities <i class="fa fa-arrow-right"></i></button>
 			</form>
